common_crate_rustflags = []

# we use minicov in qemu
if (coverage) {
  common_crate_rustflags += [
    "-Z",
    "no-profiler-runtime",
    "--cfg",
    "coverage",
  ]
}

if (profile) {
  common_crate_rustflags += [
    "-Z",
    "no-profiler-runtime",
    "--cfg",
    "profile",
  ]
}

if (board == "qemu_mps2_an385") {
  common_crate_rustflags += [
    "--cfg",
    "cortex_m",
    "--cfg",
    "armv7m",
  ]
} else if (board == "qemu_mps3_an547") {
  common_crate_rustflags += [
    "--cfg",
    "cortex_m",
    "--cfg",
    "armv8m",
    "--cfg",
    "armv8m_main",
    "--cfg",
    "has_fpu",
  ]
} else if (board == "qemu_virt64_aarch64") {
  common_crate_rustflags += [
    "--cfg",
    "cortex_a",
    "--cfg",
    "aarch64",
  ]
}

common_gcc_rustflags = [
  "-C",
  "link-arg=-nostartfiles",
  "-C",
  "link-arg=-lgcc",

  # "-C",
  # "linker=arm-none-eabi-ld",
  "-C",
  "link-arg=-Wl,--gc-sections",
]

common_lld_rustflags = [
  # # use lld to link
  # # Tell rustc to use the LLVM linker. This avoids needing GCC as a dependency
  # # to build the kernel.
  "-C",
  "linker=rust-lld",

  # # Use the LLVM lld executable with the `-flavor gnu` flag.
  # "-C",
  # "linker-flavor=ld.lld",
  "-C",
  "link-arg=--gc-sections",
]

common_image_rustflags = [
  "-C",
  "panic=abort",
  "-C",
  "link-arg=--enable-non-contiguous-regions",

  # Enable link-time-optimization
  "-C",
  "lto",

  # Have rustc generate stack sizes for analyzing the size of stack frames.
  "-Z",
  "emit-stack-sizes",

  # custom link script
  "-C",
  "link-arg=-T" + rebase_path("//kernel/kernel/src/boards/$board/link.x"),
]

common_image_rustflags += common_crate_rustflags + common_gcc_rustflags

test_image_rustflags = [
  # unstable rust custom test framework
  "--test",
  "-Z",
  "panic-abort-tests",
]
test_image_rustflags += common_image_rustflags
