common_crate_rustflags = []

# we use minicov in qemu
if (coverage) {
  common_crate_rustflags += [
    "-Z",
    "no-profiler-runtime",
    "--cfg",
    "coverage",
  ]
}

if (profile) {
  common_crate_rustflags += [
    "-Z",
    "no-profiler-runtime",
    "--cfg",
    "profile",
  ]
}

if (board == "qemu_mps2_an385") {
  common_crate_rustflags += [
    "--cfg",
    "cortex_m",
    "--cfg",
    "armv7m",
  ]
} else if (board == "qemu_mps3_an547") {
  common_crate_rustflags += [
    "--cfg",
    "cortex_m",
    "--cfg",
    "armv8m",
    "--cfg",
    "armv8m_main",
    "--cfg",
    "has_fpu",
  ]
}

common_gcc_rustflags = [
  "-Clink-arg=-nostartfiles",
  "-Clink-arg=-lgcc",
]

common_image_rustflags = [
  "-Cpanic=abort",

  # Have rustc generate stack sizes for analyzing the size of stack frames.
  "-Z",
  "emit-stack-sizes",
  "-Clink-arg=-T" + rebase_path("//kernel/kernel/src/boards/$board/link.x"),
]

if ("$board" == "qemu_riscv64") {
  common_image_rustflags += common_crate_rustflags
} else {
  common_image_rustflags += common_crate_rustflags + common_gcc_rustflags
}

test_image_rustflags = [
  # unstable rust custom test framework
  "--test",
  "-Z",
  "panic-abort-tests",
]
test_image_rustflags += common_image_rustflags

qemu_riscv64_run_args = "-bios none -smp 32 "

blueos_default_cfgs = [
  "target_board=\"$board\"",
  "scheduler=\"global\"",
  "allocator=\"tlsf\"",
]
