import("//build/templates/build_template.gni")
build_rust("adapter") {
  crate_type = "staticlib"
  sources = [ "lib.rs" ]
  edition = "2021"

  proc_macro_deps = [ "//external/paste/v1.0.15:paste" ]

  deps = [
    "//external/pinned-init/v0.0.8:pinned_init",
    "//kernel/arch:bluekernel_arch",
    "//kernel/infra:bluekernel_infra",
    "//kernel/kconfig:bluekernel_kconfig",
    "//kernel/kernel:bluekernel",
  ]
  rustflags = []
  if (adapter == "rt_thread") {
    rustflags += [
      "--cfg",
      "rt_thread",
    ]
  }
  configs += [ "//kernel/kconfig:kconfigs" ]
}
