[package]
name = "adapter"
version = "0.1.0"
edition = "2021"

[lib]
path = "lib.rs"
crate-type = ["staticlib","rlib"]

[build-dependencies]
blue_kconfig = { path = "../kconfig" }
enum-iterator = "1.4.0"

[dependencies]
blue_arch = { path = "../arch" }
blue_infra = { path = "../infra" }
blue_kernel = { path = "../kernel" }
pinned-init = { version = "0.0.8", features = ["alloc"], default-features = false }

[features]
slab = []
buddy = []
llff = []
tlsf = []
alloc = []
rwlock = ["condvar"]
condvar = ["mutex","semaphore"]
event = []
messagequeue_priority = []
semaphore = []
mutex = []
messagequeue = []
allocator_api = []
stack_highwater_check = []
schedule_with_time_slice = []
thread_priority_max = []
smp = []
mailbox = []
overflow_check = []
idle_hook = []
mempool  = []
memheap  = []
heap  = []
debugging_spinlock = []
debugging_object = []
debugging_context  = []
debugging_init  = []
debugging_scheduler = []
signals = []
heap_isr = []
