import("//build/templates/build_template.gni")
build_rust("bluekernel_arch") {
  crate_type = "rlib"
  sources = [ "src/lib.rs" ]
  edition = "2021"

  if (current_cpu == "arm") {
    deps = [
      "//external/cortex-m:cortex_m",
      "//external/tock-registers/v0.9.0:tock_registers",
    ]
  } else if (current_cpu == "aarch64") {
    #TODO:add aarch64-cpu
    deps = []
  }
  rustflags = []
  if (bsp == "qemu_mps2_an385") {
    rustflags += [
      "--cfg",
      "cortex_m",
      "--cfg",
      "armv7m",
    ]
  } else if (bsp == "qemu_mps3_an547") {
    rustflags += [
      "--cfg",
      "cortex_m",
      "--cfg",
      "armv8m",
      "--cfg",
      "armv8m_main",
      "--cfg",
      "has_fpu",
    ]
  }
}
