import("//build/templates/build_template.gni")
build_rust("bluekernel_arch") {
  crate_type = "rlib"
  sources = [ "src/lib.rs" ]
  edition = "2021"

  rustflags = []
  if (board == "qemu_mps2_an385") {
    deps = [
      "//external/cortex-m:cortex_m",
      "//external/tock-registers/v0.9.0:tock_registers",
    ]
    rustflags += [
      "--cfg",
      "cortex_m",
      "--cfg",
      "armv7m",
    ]
  } else if (board == "qemu_mps3_an547") {
    deps = [
      "//external/cortex-m:cortex_m",
      "//external/tock-registers/v0.9.0:tock_registers",
    ]
    rustflags += [
      "--cfg",
      "cortex_m",
      "--cfg",
      "armv8m",
      "--cfg",
      "armv8m_main",
      "--cfg",
      "has_fpu",
    ]
  }
}
