[workspace]

members = [
    "kernel",
    "arch",
    "os_compat/rt_thread"
]

[patch.crates-io]
blue-kernel = { path = "kernel" }
blue-arch = { path = "arch" }
rt_bindings = { path = "os_compat/rt_thread" }
#linux_bindings = { path = "os_compat/linux" }

[profile.release]
codegen-units = 1 # better optimizations
debug = 1 # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
opt-level = "z"