import("//build/templates/rust.gni")
import("//build/toolchain/bluekernel.gni")
import("//kernel/common_crate_rustflags.gni")

build_rust("tty_loopback") {
  crate_name = "tty_loopback"
  crate_type = "bin"
  sources = [ "src/tty_loopback.rs" ]
  edition = "2021"
  proc_macro_deps = [ "//external/paste/v1.0.15:paste" ]
  deps = [
    "//kernel/kernel:bluekernel",
    "//libc:libc",
  ]

  inputs = [ "//kernel/kernel/src/bsp/$bsp/link.x" ]
  rustflags = common_image_rustflags
  rustflags += common_crate_rustflags
}

gen_qemu_runner("tty_loopback_runner") {
  img = ":tty_loopback"
  qemu = "$qemu_exe"
  board = "$bsp"
}
