import("//build/templates/build_template.gni")
import("//build/toolchain/blueos.gni")

group("check_infra") {
  testonly = true
  deps = [ ":run_infra_unittest" ]
}

shared_deps = [
  "//external/cfg-if/v1.0.0:cfg_if",
  "//external/memchr/v2.7.4:memchr",
  "//external/pinned-init/v0.0.8:pinned_init",
]

build_rust("blueos_infra") {
  crate_type = "rlib"
  sources = [ "src/lib.rs" ]
  edition = "2021"
  deps = shared_deps
}

build_rust("infra_unittest") {
  testonly = true
  crate_name = "infra_unittest"
  crate_type = "bin"
  sources = [ "src/lib.rs" ]
  edition = "2021"

  deps = shared_deps
  rustflags = [ "--test" ]
}

run_host("run_infra_unittest") {
  testonly = true
  runner = ":infra_unittest"
}
