import("//build/templates/build_template.gni")
build_rust("bluekernel_kconfig") {
  crate_type = "rlib"
  sources = [ "src/load_kconfig.rs" ]
  inputs = [ "config/.config" ]
  edition = "2021"
  proc_macro_deps = [ "//external/cargo-kconfig/v0.1.1:cargo_kconfig" ]
  deps = [ "//external/enum-iterator/v1.5.0:enum_iterator" ]
}
